# Integrate

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  adaptive_quadrature.html  coverage.sh  fastgl.c  gaussian_quadrature.html  index.html  laguerre_zeros_poor_perf.json  newton-cotes.html  overview.html  print.html  release.toml  romberg.html  searchindex.js  searchindex.json  toc.html  toc.js
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  main.yml  pages.yml  release.yml  rust-ci.yml  rust.yml
adaptive_quadrature/: adaptive_simpson.html
book/: book.toml
book/src/: SUMMARY.md  adaptive_quadrature.md  gaussian_quadrature.md  getting_started.md  newton-cotes.md  overview.md  python_api.md  romberg.md
book/src/adaptive_quadrature/: adaptive_simpson.md
book/src/gauss_quadrature/: gauss_chebyshev.md  gauss_hermite.md  gauss_laguerre.md  gauss_legendre.md
book/src/newton_cotes/: newton_rule.md  rectangle_rule.md  simpson_rule.md  trapezoidal_rule.md
docs/: docs-header.html
examples/: laguerre_zeros.rs
gauss_quadrature/: gauss_chebyshev.html  gauss_hermite.html  gauss_laguerre.html  gauss_legendre.html
newton_cotes/: newton_rule.html  rectangle_rule.html  simpson_rule.html  trapezoidal_rule.html
pyo3_example/: Cargo.toml  README.md  example.py  pyproject.toml  simple_test.py
pyo3_example/src/: lib.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/python/integrate_py/: __init__.py
python/src/: lib.rs
python/tests/: test_integrate.py
references/: legendre.md
src/: adaptive_quadrature.rs  docs-header.html  gauss_quadrature.rs  lib.rs  main.rs  newton_cotes.rs  prelude.rs  romberg.rs
src/adaptive_quadrature/: mod.rs  simpson.rs
src/gauss_quadrature/: bessel.rs  chebyshev.rs  hermite.rs  laguerre.rs  legendre.rs  mod.rs  utils.rs
src/matrices/: matrix.rs
src/newton_cotes/: mod.rs  newton.rs  rectangle.rs  rectangle_rule.rs  simpson.rs  trapezoidal.rs  utils.rs
src/romberg/: mod.rs  romberg.rs
src/utils/: adaptive_simpson.rs  bessel.rs  chebyshev.rs  checkers.rs  hermite.rs  laguerre.rs  legendre.rs  matrix.rs  mod.rs  newton_raphson.rs  orthogonal_polynomials.rs
tests/: problems.rs  test_adaptive_quadrature.rs  test_legendre.rs  test_newton_cotes.rs  test_romberg.rs
