[package]
name = "integrate"
version = "0.1.11"
edition = "2021"

authors = ["Mahdi Tantaoui <mohamedalmahdi.tantaoui@gmail.com>"]
description = " Small, lightweight Rust library for performing numerical integration."
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/mtantaoui/Integrate"
documentation = "https://docs.rs/integrate/"
readme = "README.md"
keywords = ["math", "integral", "Gauss", "performance",  "Numerical"]


[dependencies]
itertools = "0.13.0"
num = "0.4.1"
num-traits = "0.2.18"



[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs/docs-header.html" ]