[package]
name = "integrate-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "integrate_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
# Use the published crate so `python/` can be built standalone (e.g. for PyPI sdist).
integrate = "0.1.11"

[package.metadata.maturin]
python-source = "python"
