[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "integrate-py"
version = "0.1.11"
description = "Fast numerical integration — Python bindings for the integrate Rust crate"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Mahdi Tantaoui", email = "mohamedalmahdi.tantaoui@gmail.com" }
]
keywords = ["integration", "numerical", "math", "gauss", "quadrature"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mtantaoui/Integrate"
Documentation = "https://mtantaoui.github.io/Integrate"
Repository = "https://github.com/mtantaoui/Integrate"
"Bug Tracker" = "https://github.com/mtantaoui/Integrate/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "integrate_py._integrate_py"

[tool.pytest.ini_options]
testpaths = ["tests"]
